@@ -4,8 +4,8 @@ import com.busticketbookingsystem.customer.service.CustomerService;
 import com.busticketbookingsystem.review.dto.ReviewDTO;
 import com.busticketbookingsystem.review.entity.Review;
 import com.busticketbookingsystem.review.service.ReviewService;
-import com.busticketbookingsystem.trip.entity.Trip;
 import com.busticketbookingsystem.trip.dto.TripDTO;
+import com.busticketbookingsystem.trip.entity.Trip;
 import com.busticketbookingsystem.trip.service.TripService;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
@@ -17,7 +17,6 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Controller
 public class ReviewController {
@@ -37,26 +36,33 @@ public class ReviewController {
 
     @PostMapping("/api/reviews")
     @ResponseBody
-    public Review createReview(@Valid @RequestBody ReviewDTO reviewDTO) {
-        return reviewService.createReview(reviewDTO);
+    public Map<String, Object> createReview(@Valid @RequestBody ReviewDTO reviewDTO) {
+        Review r = reviewService.createReview(reviewDTO);
+        return mapReviewToMap(r);
     }
 
     @GetMapping("/api/reviews")
     @ResponseBody
-    public List<Review> getAllReviews() {
-        return reviewService.getAllReviews();
+    public List<Map<String, Object>> getAllReviews() {
+        return reviewService.getAllReviews().stream()
+                .map(this::mapReviewToMap)
+                .toList();
     }
 
     @GetMapping("/api/reviews/trip/{tripId}")
     @ResponseBody
-    public List<Review> getReviewsByTrip(@PathVariable Integer tripId) {
-        return reviewService.getReviewsByTrip(tripId);
+    public List<Map<String, Object>> getReviewsByTrip(@PathVariable Integer tripId) {
+        return reviewService.getReviewsByTrip(tripId).stream()
+                .map(this::mapReviewToMap)
+                .toList();
     }
 
     @GetMapping("/api/reviews/customer/{customerId}")
     @ResponseBody
-    public List<Review> getReviewsByCustomer(@PathVariable Integer customerId) {
-        return reviewService.getReviewsByCustomer(customerId);
+    public List<Map<String, Object>> getReviewsByCustomer(@PathVariable Integer customerId) {
+        return reviewService.getReviewsByCustomer(customerId).stream()
+                .map(this::mapReviewToMap)
+                .toList();
     }
 
     @DeleteMapping("/api/reviews/{id}")
@@ -72,7 +78,10 @@ public class ReviewController {
 
     @GetMapping("/view/reviews")
     public String listReviews(Model model) {
-        model.addAttribute("reviews", reviewService.getAllReviews());
+        List<Map<String, Object>> reviews = reviewService.getAllReviews().stream()
+                .map(this::mapReviewToMap)
+                .toList();
+        model.addAttribute("reviews", reviews);
         return "review/reviews";
     }
 
@@ -80,18 +89,11 @@ public class ReviewController {
     public String showAddReviewForm(Model model) {
         model.addAttribute("review", new ReviewDTO());
         model.addAttribute("customers", customerService.getAll());
-        List<TripDTO> trips = tripService.getAllTrips().stream().map(this::mapTripToDTO).collect(Collectors.toList());
+        List<TripDTO> trips = tripService.getAllTrips().stream()
+                .map(this::mapTripToDTO)
+                .toList();
         model.addAttribute("trips", trips);
         return "review/add-review";
-    }
-
-    private TripDTO mapTripToDTO(Trip t) {
-        return TripDTO.builder()
-                .tripId(t.getTripId())
-                .fromCity(t.getRoute().getFromCity())
-                .toCity(t.getRoute().getToCity())
-                .departureTime(t.getDepartureTime())
-                .build();
     }
 
     @PostMapping("/view/reviews/save")
@@ -106,5 +108,30 @@ public class ReviewController {
         reviewService.deleteReview(id);
         redirectAttributes.addFlashAttribute("success", "Review deleted successfully");
         return "redirect:/view/reviews";
+    }
+
+    // ======================== HELPERS ========================
+
+    private Map<String, Object> mapReviewToMap(Review r) {
+        Map<String, Object> map = new LinkedHashMap<>();
+        map.put("reviewId", r.getReviewId());
+        map.put("customerId", r.getCustomer() != null ? r.getCustomer().getCustomerId() : null);
+        map.put("customerName", r.getCustomer() != null ? r.getCustomer().getName() : "N/A");
+        map.put("tripId", r.getTrip() != null ? r.getTrip().getTripId() : null);
+        map.put("tripInfo", r.getTrip() != null && r.getTrip().getRoute() != null
+                ? r.getTrip().getRoute().getFromCity() + " -> " + r.getTrip().getRoute().getToCity() : "N/A");
+        map.put("rating", r.getRating());
+        map.put("comment", r.getComment());
+        map.put("reviewDate", r.getReviewDate());
+        return map;
+    }
+
+    private TripDTO mapTripToDTO(Trip t) {
+        return TripDTO.builder()
+                .tripId(t.getTripId())
+                .fromCity(t.getRoute().getFromCity())
+                .toCity(t.getRoute().getToCity())
+                .departureTime(t.getDepartureTime())
+                .build();
     }
 }
